CREATE TABLE IF NOT EXISTS users (
  id UUID PRIMARY KEY,
  full_name VARCHAR(100) NOT NULL,
  email VARCHAR(255) NOT NULL,
  password_hash VARCHAR(255) NOT NULL,
  role VARCHAR(30) NOT NULL,
  deleted BOOLEAN NOT NULL,
  created_at TIMESTAMP WITH TIME ZONE NOT NULL
);

CREATE UNIQUE INDEX IF NOT EXISTS uk_users_email ON users (email);

CREATE TABLE IF NOT EXISTS user_sessions (
  id UUID PRIMARY KEY,
  user_id UUID NOT NULL,
  title VARCHAR(255) NOT NULL,
  status VARCHAR(255) NOT NULL,
  started_at TIMESTAMP WITH TIME ZONE NOT NULL,
  ended_at TIMESTAMP WITH TIME ZONE,
  summary VARCHAR(5000),
  CONSTRAINT fk_user_sessions_user FOREIGN KEY (user_id) REFERENCES users(id)
);

CREATE INDEX IF NOT EXISTS idx_user_sessions_user_id ON user_sessions (user_id);
CREATE INDEX IF NOT EXISTS idx_user_sessions_started_at ON user_sessions (started_at);

CREATE TABLE IF NOT EXISTS cbt_sessions (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id UUID NOT NULL,
  focus_area VARCHAR(255),
  session_state VARCHAR(50) NOT NULL,
  started_at TIMESTAMP WITH TIME ZONE NOT NULL,
  ended_at TIMESTAMP WITH TIME ZONE,
  CONSTRAINT fk_cbt_sessions_user FOREIGN KEY (user_id) REFERENCES users(id)
);

CREATE INDEX IF NOT EXISTS idx_cbt_sessions_user_id ON cbt_sessions (user_id);

CREATE TABLE IF NOT EXISTS cbt_session_insights (
  cbt_session_id BIGINT NOT NULL,
  insight VARCHAR(255),
  CONSTRAINT fk_cbt_session_insights_session
    FOREIGN KEY (cbt_session_id) REFERENCES cbt_sessions(id)
);

CREATE INDEX IF NOT EXISTS idx_cbt_session_insights_session_id
  ON cbt_session_insights (cbt_session_id);

CREATE TABLE IF NOT EXISTS chat_messages (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  session_id UUID,
  cbt_session_id BIGINT,
  role VARCHAR(50) NOT NULL,
  content TEXT NOT NULL,
  sent_at TIMESTAMP WITH TIME ZONE NOT NULL,
  CONSTRAINT fk_chat_messages_user_session
    FOREIGN KEY (session_id) REFERENCES user_sessions(id),
  CONSTRAINT fk_chat_messages_cbt_session
    FOREIGN KEY (cbt_session_id) REFERENCES cbt_sessions(id)
);

CREATE INDEX IF NOT EXISTS idx_chat_message_sent_at ON chat_messages (sent_at);
CREATE INDEX IF NOT EXISTS idx_chat_messages_session_id ON chat_messages (session_id);
CREATE INDEX IF NOT EXISTS idx_chat_messages_cbt_session_id ON chat_messages (cbt_session_id);

CREATE TABLE IF NOT EXISTS cognitive_distortions (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  label VARCHAR(100) NOT NULL,
  description TEXT NOT NULL,
  cbt_prompt_mapping TEXT,
  CONSTRAINT uk_cognitive_distortions_label UNIQUE (label)
);

CREATE TABLE IF NOT EXISTS diary_entries (
  id UUID PRIMARY KEY,
  user_id UUID NOT NULL,
  automatic_thought VARCHAR(3000) NOT NULL,
  emotion VARCHAR(255) NOT NULL,
  reflection VARCHAR(4000) NOT NULL,
  suggested_distortions VARCHAR(2000),
  created_at TIMESTAMP WITH TIME ZONE NOT NULL,
  CONSTRAINT fk_diary_entries_user FOREIGN KEY (user_id) REFERENCES users(id)
);

CREATE INDEX IF NOT EXISTS idx_diary_entries_user_id ON diary_entries (user_id);
CREATE INDEX IF NOT EXISTS idx_diary_entries_created_at ON diary_entries (created_at);

CREATE TABLE IF NOT EXISTS diary_distortions (
  diary_entry_id UUID NOT NULL,
  distortion_id BIGINT NOT NULL,
  PRIMARY KEY (diary_entry_id, distortion_id),
  CONSTRAINT fk_diary_distortions_entry
    FOREIGN KEY (diary_entry_id) REFERENCES diary_entries(id),
  CONSTRAINT fk_diary_distortions_distortion
    FOREIGN KEY (distortion_id) REFERENCES cognitive_distortions(id)
);

CREATE TABLE IF NOT EXISTS trusted_contacts (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id UUID NOT NULL,
  name VARCHAR(255) NOT NULL,
  phone VARCHAR(50) NOT NULL,
  relation VARCHAR(100),
  CONSTRAINT fk_trusted_contacts_user FOREIGN KEY (user_id) REFERENCES users(id)
);

CREATE INDEX IF NOT EXISTS idx_trusted_contacts_user_id ON trusted_contacts (user_id);

CREATE TABLE IF NOT EXISTS refresh_tokens (
  id UUID PRIMARY KEY,
  token VARCHAR(1024) NOT NULL,
  user_id UUID NOT NULL,
  expires_at TIMESTAMP WITH TIME ZONE NOT NULL,
  revoked BOOLEAN NOT NULL,
  CONSTRAINT uk_refresh_tokens_token UNIQUE (token),
  CONSTRAINT fk_refresh_tokens_user FOREIGN KEY (user_id) REFERENCES users(id)
);

CREATE INDEX IF NOT EXISTS idx_refresh_tokens_user_id ON refresh_tokens (user_id);
